--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <!-- NAVBAR STARTS FROM HERE -->
     <nav class="navbar navbar-expand-lg bg-dark sticky-top navbar-dark px-3">
         
-            <a class="navbar-brand text-danger" href="/index.html">CODETECH</a>
+            <a class="navbar-brand text-danger" href="/CodeTechBootstrap/index.html">CODETECH</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link " aria-current="page" href="/CodeTechBootstrap/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="/CodeTechBootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -44,7 +44,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/contact.html">ContactUs</a>
+                        <a class="nav-link" aria-current="page" href="/CodeTechBootstrap/contact.html">ContactUs</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
