--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             Topics
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Technology </a></li>
-            <li><a class="dropdown-item" href="#">Web development</a></li>
+            <li><a class="dropdown-item"  target="_blank" href="https://indianexpress.com/section/technology/">Technology </a></li>
+            <li><a class="dropdown-item"  target="_blank" href="https://www.geeksforgeeks.org/web-development/">Web development</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -138,7 +138,7 @@
   <!-- SIGNUP MODAL ENDS  -->
 
   <!-- CAROUSEL START -->
-  <div id="carouselExampleDark" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
+<div id="carouselExampleDark" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
@@ -151,9 +151,12 @@
         <div class="carousel-caption d-none d-md-block">
           <h1>Welcome to CODETECH</h1>
           <p>Technology News, Development and Trends</p>
-          <button type="button" class="btn btn-primary">Technology</button>
-          <button type="button" class="btn btn-danger">Web Development</button>
-          <button type="button" class="btn btn-success">Tech Fun</button>
+          <a target="_blank" href="https://indianexpress.com/section/technology/"><button type="button"
+              class="btn btn-primary">Technology</button></a>
+          <a target="_blank" href="https://www.geeksforgeeks.org/web-development/"><button type="button"
+              class="btn btn-danger">Web Development</button></a>
+          <a target="_blank" href="https://teachyourkidscode.com/technology-facts/"><button type="button"
+              class="btn btn-success">Tech Fun</button></a>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
@@ -161,9 +164,12 @@
         <div class="carousel-caption d-none d-md-block">
           <h1>The Best Coding Blog</h1>
           <p>Technology News, Development and Trends</p>
-          <button type="button" class="btn btn-primary">Technology</button>
-          <button type="button" class="btn btn-danger">Web Development</button>
-          <button type="button" class="btn btn-success">Tech Fun</button>
+          <a target="_blank" href="https://indianexpress.com/section/technology/"><button type="button"
+              class="btn btn-primary">Technology</button></a>
+          <a target="_blank" href="https://www.geeksforgeeks.org/web-development/"><button type="button"
+              class="btn btn-danger">Web Development</button></a>
+          <a target="_blank" href="https://teachyourkidscode.com/technology-facts/"><button type="button"
+              class="btn btn-success">Tech Fun</button></a>
         </div>
       </div>
       <div class="carousel-item">
@@ -171,9 +177,12 @@
         <div class="carousel-caption d-none d-md-block">
           <h1>Award Winning Blog</h1>
           <p>Technology News, Development and Trends</p>
-          <button type="button" class="btn btn-primary">Technology</button>
-          <button type="button" class="btn btn-danger">Web Development</button>
-          <button type="button" class="btn btn-success">Tech Fun</button>
+          <a target="_blank" href="https://indianexpress.com/section/technology/"><button type="button"
+              class="btn btn-primary">Technology</button></a>
+          <a target="_blank" href="https://www.geeksforgeeks.org/web-development/"><button type="button"
+              class="btn btn-danger">Web Development</button></a>
+          <a target="_blank" href="https://teachyourkidscode.com/technology-facts/"><button type="button"
+              class="btn btn-success">Tech Fun</button></a>
         </div>
       </div>
     </div>
