--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,10 @@
                         Topics
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Technology </a></li>
-                        <li><a class="dropdown-item" href="#">Web development</a></li>
+                        <li><a class="dropdown-item" target="_blank"
+                                href="https://indianexpress.com/section/technology/">Technology </a></li>
+                        <li><a class="dropdown-item" target="_blank"
+                                href="https://www.geeksforgeeks.org/web-development/">Web development</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
