--- a/about.html
+++ b/about.html
@@ -34,14 +34,16 @@
                             Topics
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Technology </a></li>
-                            <li><a class="dropdown-item" href="#">Web development</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Support us</a></li>
-                            <li><a class="dropdown-item" href="#">Write for us</a></li>
-                        </ul>
+                        <li><a class="dropdown-item" target="_blank"
+                                href="https://indianexpress.com/section/technology/">Technology </a></li>
+                        <li><a class="dropdown-item" target="_blank"
+                                href="https://www.geeksforgeeks.org/web-development/">Web development</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="#">Support us</a></li>
+                        <li><a class="dropdown-item" href="#">Write for us</a></li>
+                    </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/CodeTechBootstrap/contact.html">ContactUs</a>
