--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visuall">Previous</span>
+      <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visuall">Next</span>
+      <span class="visually-hidden">Next</span>
     </button>
   </div>
   <!-- CAROUSEL END -->
